--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -22,6 +22,7 @@ DisableHighDPIScaling    = 0
 DSoundCtrl               = 0
 DxWnd                    = 0
 ConvertToDirectDraw7     = 0
+ConvertToDirect3D7       = 0
 ForceTermination         = 0
 HandleExceptions         = 0
 ResetScreenRes           = 0
