Remove ArmadaFix and add color mode
- Replace ArmadaFix with 16bit/32bit color mode options
- Fix crash in IDirect3DEnumDevices::ConvertCallback

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -10,7 +10,6 @@ WaitForProcess           = 0
 
 [Compatibility]
 AntiAliasing             = 0
-ArmadaFix                = 0
 CacheClipPlane           = 0
 D3d8to9                  = 0
 DDrawCompat              = 0
@@ -23,6 +22,8 @@ DSoundCtrl               = 0
 DxWnd                    = 0
 ConvertToDirectDraw7     = 0
 ConvertToDirect3D7       = 0
+Force16bitColor          = 0
+Force32bitColor          = 0
 ForceTermination         = 0
 HandleExceptions         = 0
 ResetScreenRes           = 0
