--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -11,6 +11,8 @@ WaitForProcess           = 0
 [Compatibility]
 AntiAliasing             = 0
 CacheClipPlane           = 0
+ConvertToDirectDraw7     = 0
+ConvertToDirect3D7       = 0
 D3d8to9                  = 0
 DDrawCompat              = 0
 DDrawCompat20            = 0
@@ -20,8 +22,7 @@ DDrawCompatDisableGDIHook = 0
 DisableHighDPIScaling    = 0
 DSoundCtrl               = 0
 DxWnd                    = 0
-ConvertToDirectDraw7     = 0
-ConvertToDirect3D7       = 0
+EnableVSync              = 0
 Force16bitColor          = 0
 Force32bitColor          = 0
 ForceTermination         = 0
