Minor Reorg of ddraw

--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -240,44 +240,44 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClCompile Include="ddraw\IDirect3DX.cpp" />
     <ClCompile Include="ddraw\IDirectDrawSurfaceX.cpp" />
     <ClCompile Include="ddraw\IDirectDrawTypes.cpp" />
-    <ClCompile Include="ddraw\IDirect3D.cpp" />
-    <ClCompile Include="ddraw\IDirect3D2.cpp" />
-    <ClCompile Include="ddraw\IDirect3D3.cpp" />
-    <ClCompile Include="ddraw\IDirect3D7.cpp" />
-    <ClCompile Include="ddraw\IDirect3DDevice.cpp" />
-    <ClCompile Include="ddraw\IDirect3DDevice2.cpp" />
-    <ClCompile Include="ddraw\IDirect3DDevice3.cpp" />
-    <ClCompile Include="ddraw\IDirect3DDevice7.cpp" />
     <ClCompile Include="ddraw\IDirect3DExecuteBuffer.cpp" />
     <ClCompile Include="ddraw\IDirect3DLight.cpp" />
-    <ClCompile Include="ddraw\IDirect3DMaterial.cpp" />
-    <ClCompile Include="ddraw\IDirect3DMaterial2.cpp" />
-    <ClCompile Include="ddraw\IDirect3DMaterial3.cpp" />
-    <ClCompile Include="ddraw\IDirect3DTexture.cpp" />
-    <ClCompile Include="ddraw\IDirect3DTexture2.cpp" />
-    <ClCompile Include="ddraw\IDirect3DVertexBuffer.cpp" />
-    <ClCompile Include="ddraw\IDirect3DVertexBuffer7.cpp" />
-    <ClCompile Include="ddraw\IDirect3DViewport.cpp" />
-    <ClCompile Include="ddraw\IDirect3DViewport2.cpp" />
-    <ClCompile Include="ddraw\IDirect3DViewport3.cpp" />
-    <ClCompile Include="ddraw\IDirectDraw.cpp" />
-    <ClCompile Include="ddraw\IDirectDraw2.cpp" />
-    <ClCompile Include="ddraw\IDirectDraw3.cpp" />
-    <ClCompile Include="ddraw\IDirectDraw4.cpp" />
-    <ClCompile Include="ddraw\IDirectDraw7.cpp" />
     <ClCompile Include="ddraw\IDirectDrawClipper.cpp" />
     <ClCompile Include="ddraw\IDirectDrawColorControl.cpp" />
     <ClCompile Include="ddraw\IDirectDrawEnumCallback.cpp" />
     <ClCompile Include="ddraw\IDirectDrawFactory.cpp" />
     <ClCompile Include="ddraw\IDirectDrawGammaControl.cpp" />
     <ClCompile Include="ddraw\IDirectDrawPalette.cpp" />
-    <ClCompile Include="ddraw\IDirectDrawSurface.cpp" />
-    <ClCompile Include="ddraw\IDirectDrawSurface2.cpp" />
-    <ClCompile Include="ddraw\IDirectDrawSurface3.cpp" />
-    <ClCompile Include="ddraw\IDirectDrawSurface4.cpp" />
-    <ClCompile Include="ddraw\IDirectDrawSurface7.cpp" />
     <ClCompile Include="ddraw\IDirectDrawX.cpp" />
     <ClCompile Include="ddraw\InterfaceQuery.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3D.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3D2.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3D3.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3D7.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DDevice.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DDevice2.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DDevice3.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DDevice7.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DMaterial.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DMaterial2.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DMaterial3.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DTexture.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DTexture2.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DVertexBuffer.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DVertexBuffer7.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DViewport.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DViewport2.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirect3DViewport3.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirectDraw.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirectDraw2.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirectDraw3.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirectDraw4.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirectDraw7.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirectDrawSurface.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirectDrawSurface2.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirectDrawSurface3.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirectDrawSurface4.cpp" />
+    <ClCompile Include="ddraw\Versions\IDirectDrawSurface7.cpp" />
     <ClCompile Include="Disasm\cmdlist.c" />
     <ClCompile Include="Disasm\Disasm.c" />
     <ClCompile Include="Dllmain\Dllmain.cpp" />
@@ -482,43 +482,43 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="ddraw\IDirect3DX.h" />
     <ClInclude Include="ddraw\IDirectDrawSurfaceX.h" />
     <ClInclude Include="ddraw\IDirectDrawTypes.h" />
-    <ClInclude Include="ddraw\IDirect3D.h" />
-    <ClInclude Include="ddraw\IDirect3D2.h" />
-    <ClInclude Include="ddraw\IDirect3D3.h" />
-    <ClInclude Include="ddraw\IDirect3D7.h" />
-    <ClInclude Include="ddraw\IDirect3DDevice.h" />
-    <ClInclude Include="ddraw\IDirect3DDevice2.h" />
-    <ClInclude Include="ddraw\IDirect3DDevice3.h" />
-    <ClInclude Include="ddraw\IDirect3DDevice7.h" />
     <ClInclude Include="ddraw\IDirect3DExecuteBuffer.h" />
     <ClInclude Include="ddraw\IDirect3DLight.h" />
-    <ClInclude Include="ddraw\IDirect3DMaterial.h" />
-    <ClInclude Include="ddraw\IDirect3DMaterial2.h" />
-    <ClInclude Include="ddraw\IDirect3DMaterial3.h" />
-    <ClInclude Include="ddraw\IDirect3DTexture.h" />
-    <ClInclude Include="ddraw\IDirect3DTexture2.h" />
-    <ClInclude Include="ddraw\IDirect3DVertexBuffer.h" />
-    <ClInclude Include="ddraw\IDirect3DVertexBuffer7.h" />
-    <ClInclude Include="ddraw\IDirect3DViewport.h" />
-    <ClInclude Include="ddraw\IDirect3DViewport2.h" />
-    <ClInclude Include="ddraw\IDirect3DViewport3.h" />
-    <ClInclude Include="ddraw\IDirectDraw.h" />
-    <ClInclude Include="ddraw\IDirectDraw2.h" />
-    <ClInclude Include="ddraw\IDirectDraw3.h" />
-    <ClInclude Include="ddraw\IDirectDraw4.h" />
-    <ClInclude Include="ddraw\IDirectDraw7.h" />
     <ClInclude Include="ddraw\IDirectDrawClipper.h" />
     <ClInclude Include="ddraw\IDirectDrawColorControl.h" />
     <ClInclude Include="ddraw\IDirectDrawEnumCallback.h" />
     <ClInclude Include="ddraw\IDirectDrawFactory.h" />
     <ClInclude Include="ddraw\IDirectDrawGammaControl.h" />
     <ClInclude Include="ddraw\IDirectDrawPalette.h" />
-    <ClInclude Include="ddraw\IDirectDrawSurface.h" />
-    <ClInclude Include="ddraw\IDirectDrawSurface2.h" />
-    <ClInclude Include="ddraw\IDirectDrawSurface3.h" />
-    <ClInclude Include="ddraw\IDirectDrawSurface4.h" />
-    <ClInclude Include="ddraw\IDirectDrawSurface7.h" />
     <ClInclude Include="ddraw\IDirectDrawX.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3D.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3D2.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3D3.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3D7.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DDevice.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DDevice2.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DDevice3.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DDevice7.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DMaterial.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DMaterial2.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DMaterial3.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DTexture.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DTexture2.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DVertexBuffer.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DVertexBuffer7.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DViewport.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DViewport2.h" />
+    <ClInclude Include="ddraw\Versions\IDirect3DViewport3.h" />
+    <ClInclude Include="ddraw\Versions\IDirectDraw.h" />
+    <ClInclude Include="ddraw\Versions\IDirectDraw2.h" />
+    <ClInclude Include="ddraw\Versions\IDirectDraw3.h" />
+    <ClInclude Include="ddraw\Versions\IDirectDraw4.h" />
+    <ClInclude Include="ddraw\Versions\IDirectDraw7.h" />
+    <ClInclude Include="ddraw\Versions\IDirectDrawSurface.h" />
+    <ClInclude Include="ddraw\Versions\IDirectDrawSurface2.h" />
+    <ClInclude Include="ddraw\Versions\IDirectDrawSurface3.h" />
+    <ClInclude Include="ddraw\Versions\IDirectDrawSurface4.h" />
+    <ClInclude Include="ddraw\Versions\IDirectDrawSurface7.h" />
     <ClInclude Include="Disasm\disasm.h" />
     <ClInclude Include="Dllmain\Dllmain.h" />
     <ClInclude Include="Dllmain\dxwrapper.h" />
